--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 #id {
 width: 50px;
-background-color: #88bdf3;
+color: #88bdf3;
 
 
 }
@@ -8,6 +8,7 @@ background-color: #88bdf3;
 img {
 	width: 40px;
 	height: 40px;
+	
 
 }
 
