--- a/mystyle.css
+++ b/mystyle.css
@@ -16,11 +16,13 @@ img {
 ul {
 
 	display: inline-block;
-	float: right;
+	float: right
+	margin-right: 10px;
 }
 li {
 
 	display: inline-block;
+	padding: 5px 5px 5px 5px;
 }
 
 
