--- a/mystyle.css
+++ b/mystyle.css
@@ -17,12 +17,12 @@ ul {
 
 	display: inline-block;
 	float: right
-	margin-right: 10px;
+	
 }
 li {
 
 	display: inline-block;
-	
+	padding: 5px 5px 5px 5px;
 }
 
 
