--- a/mystyle.css
+++ b/mystyle.css
@@ -19,6 +19,9 @@ ul {
 	float: right;
 	margin-bottom: 10px;
 	margin-right: 10px;
+	font-family: Oswald;
+	font-size: 30px;
+	text-decoration: none;
 	
 }
 li {
