--- a/mystyle.css
+++ b/mystyle.css
@@ -13,7 +13,7 @@ img {
 	margin-left: 10px;
 
 }
-ul {
+ul li{
 
 	display: inline-block;
 	float: right;
@@ -26,7 +26,7 @@ ul {
 	
 	
 }
-li {
+li a {
 
 	display: inline-block;
 	text-decoration: none;
