--- a/mystyle.css
+++ b/mystyle.css
@@ -26,20 +26,15 @@ ul li{
 	margin-right: 10px;
 	font-family: Oswald;
 	font-size: 20px;
+	color: red;
 	
 	
 	
 }
-li a {
+ul li a {
 
 
 	text-decoration: none;
-	color: white;
-	
-	margin-right: 10px;
-	font-family: Oswald;
-	font-size: 20px;
-	margin-bottom: 50px;
 	float: right;
 	clear:both;
 	
