--- a/mystyle.css
+++ b/mystyle.css
@@ -11,7 +11,7 @@ img {
 }
 
 .nav  {
-        height: 70px;
+        height: 50px;
         position: relative;
         background-color: #8CB69B;
 	
@@ -21,7 +21,7 @@ img {
 .nav a {
 	font-family: Oswald;
 	font-size: 20px;
-	color: red;
+	color: white;
 	text-decoration: none;
 	
 
@@ -29,7 +29,7 @@ img {
 
 .nav ul {
 position: absolute;
-vertical-align: middle;
+top: -20px;
 
 }
 
