--- a/mystyle.css
+++ b/mystyle.css
@@ -1,12 +1,15 @@
 img {
 	width: 100%;
 	position: relative;
+	top: 0;
+	
 	
 	
 }
 
 .header {
 	height: 50px;
+	width: 100%;
 	background-color: #1F1C1C;
 	background:rgba(0,0,0,0.5);
 	position: absolute;
