--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 img {
-	width: 900px;
+	width: 1500px;
 	position: relative;
 	top: 0;
 	
@@ -13,5 +13,6 @@ img {
 	background-color: #1F1C1C;
 	background:rgba(0,0,0,0.5);
 	position: absolute;
+	right: 10px;
 	top: 0;
 }
