--- a/style.css
+++ b/style.css
@@ -25,6 +25,14 @@ h1 {
 
 }
 
+#navBar li {
+position: inline;
+font-family: Helvetica;
+font-size:12px;
+color: white;
+}
+
+
 @-webkit-keyframes wave {
     0% { -webkit-transform: rotate(40deg); }
     100% { -webkit-transform: rotate(0deg); }
