--- a/style.css
+++ b/style.css
@@ -34,8 +34,11 @@ color: white;
 
 #navBar li div {
 	display: inline;
-	margin-left:10px;
-	margin-right:10px;
+	margin-left:30px;
+	margin-right:30px;
+	padding-left:10px;
+	padding-right:10px;
+
 
 	}
 
