--- a/style.css
+++ b/style.css
@@ -32,35 +32,30 @@ font-size:12px;
 color: white;
 }
 
-#navBar li {
+#navBar ul li {
 	display: inline;
+	padding: 10px;
 	}
 
 	
-#me p {
+ul li:nth-child(1) {
     background-color: #2C82C9;
-    margin-right:15px;
-    padding:10px 20px;
+
 } 
 
-#home p {
+ul li:nth-child(2) {
     background-color: #2CC990;
-    margin-left:15px;
-	margin-right:15px;
-	padding:10px 20px;
+
 } 
 
-#school p {
+ul li:nth-child(3) {
     background-color: #EEE657;
-    margin-left:15px;
-	margin-right:15px;
-	padding:10px 20px;
+
 } 
 
-#fun p {
+ul li:nth-child(4) {
     background-color: #FCB941;
-    margin-left:15px;
-    padding:10px 20px;
+
 	} 
 
 
