--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ color: white;
 
 #navBar ul li {
 	display: inline;
-	padding: 10px 15px;
+	padding- bottom: 10px;
 	float: left;
 	}
 #navBar ul li div {
