--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ color: white;
 
 #navBar ul li div {
 	width:100px;
+	display: inline-block;
 }
 	
 #me {
@@ -45,9 +46,6 @@ color: white;
    
 
 } 
-
-
-
 
 #home {
     background-color: #2CC990;
