--- a/style.css
+++ b/style.css
@@ -37,12 +37,13 @@ color: white;
 	}
 
 #navBar ul li div {
-	width:100px;
+	width:70px;
 	display: inline-block;
 }
 	
 #me {
     background-color: #2C82C9;
+    left:0;
    
 
 } 
@@ -61,6 +62,7 @@ color: white;
 
 #fun {
 	background-color: #FCB941;
+	right: 0;
 }
 
 
