--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ color: white;
 }
 
 #navBar ul li {
+	position: relative;
 
 	}
 
@@ -49,7 +50,6 @@ color: white;
 	
 #me {
     background-color: #2C82C9;
-    position: relative;
     left:0;
    
 
@@ -57,22 +57,19 @@ color: white;
 
 #home {
     background-color: #2CC990;
-    position: relative;
     bottom: 0;} 
 
 
 
 #school {
     background-color: #EEE657;
-    position: relative;
     bottom: 0;
     } 
 
 
 #fun {
 	background-color: #FCB941;
-	position: relative;
-	right: 0;
+	ht: 0;
 }
 
 
