--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ h1 {
 }
 
 #navBar {
-	}
+position: absolute;
+}
 
-#navBar li {
+#navBar div {
 display: inline;
 font-family: Helvetica;
 font-size:12px;
@@ -37,16 +38,14 @@ color: white;
 position: absolute;
 }
 
-#navBar ul li {
-	
-	}
 
-#navBar ul li div {
+
+#navBar div {
 	width:70px;
 	display: inline-block;
 	padding-bottom: 20px;
 	padding-top: 20px; 
-	position: absolute;
+	position: relative;
 }
 	
 #me {
