--- a/style.css
+++ b/style.css
@@ -40,14 +40,18 @@ position: absolute;
 }
 
 
-
+#navBar div a {
+ font-family: Helvetica;
+ font-size:12px;
+ text-decoration: none;
+ font-color: white;
+}
 
 #navBar div {
-	font-family: Helvetica;
-	font-size:12px;
+	
 	width:80px;
-	padding-bottom: 20px;
-	padding-top: 20px; 
+	padding-bottom: 1px;
+	padding-top: 40px; 
 	position: relative;
 	float: left;
 }
