--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ position: absolute;
 #navBar div {
 	
 	width:80px;
+	height:50px;
 	padding-bottom: 1px;
 	padding-top: 40px; 
 	position: relative;
