--- a/style.css
+++ b/style.css
@@ -45,13 +45,18 @@ position: absolute;
  font-size:12px;
  text-decoration: none;
  font-color: white;
+ text-align: center;
+ margin-left: auto;
+ margin-left: auto;
+ position: relative;
+ bottom: 0;
 }
 
 #navBar div {
 	
 	width:80px;
 	height:50px;
-	padding-bottom: 1px;
+	padding-bottom: 0px;
 	padding-top: 40px; 
 	position: relative;
 	float: left;
