--- a/style.css
+++ b/style.css
@@ -40,12 +40,12 @@ position: absolute;
 
 #navBar div a {
  font-family: Helvetica;
- font-size:12px;
+ font-size:3px;
  text-decoration: none;
  font-color: white;
  text-align: center;
  margin-left: auto;
- margin-left: auto;
+ margin-right: auto;
  position: relative;
  bottom: 0;
 }
