--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@ h1 {
 	color: white;
 	font-size: 20px;
 	text-align: center;
-
-
 }
 
 #navBar {
@@ -41,9 +39,14 @@ position: absolute;
 #navBar div a {
  font-size: 12px;
  text-decoration: none;
- font-color: white;
+ color: white;
  text-align: center;
  bottom: 0;
+}
+
+#me a{
+	text-decoration: none;
+
 }
 
 #navBar div {
