--- a/style.css
+++ b/style.css
@@ -59,9 +59,6 @@ h1 {
     left: 0px;
 }
 
-.location {
-	outline: 0;
-	border: 0;
-	background-color: #FCB941;
-	height: 50px;
+#basic_map {
+    margin:0px;
 }
