--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
 #uzb {
     background-color: #2CC990;
 }
+
+#schoolPage {
+    background-color: #EEE657;
+}
 h1 {
     font-family: Dosis;
     color: white;
