--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 #schoolPage {
-    background-color: #EEE657;
+    background-color: #FCB941;
 }
 h1 {
     font-family: Dosis;
@@ -56,7 +56,7 @@ h1 {
     background-color: #2CC990;
 }
 #school {
-    background-color: #EEE657;
+    background-color: #FCB941;
 }
 #fun {
     background-color: #FC6042;
