--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h1 {
     width:80px;
     height:30px;
     padding-bottom: 0px;
-    padding-top: 30px;
+    padding-top: 5px;
     position: relative;
     float: left;
     text-align: center;
@@ -56,6 +56,7 @@ h1 {
 #me img {
     display: block;
     margin: 0px auto;
+    height:20px;
 }
 #home {
     background-color: #2CC990;
