--- a/style.css
+++ b/style.css
@@ -80,3 +80,13 @@ margin: 0px auto;
 margin-bottom: 10px;
 
 }
+
+#portfolioButton {
+  background-color:white;
+  border:none;
+  
+}
+
+#drawings li {
+    display:none;
+}
