--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ margin-bottom: 10px;
 
 
 #portfolioImage img {
-display: none;
+visibility: hidden;
 height: 300px;
 display: block;
 margin: 0px auto;
