--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ display: none;
 #rightAr {
     height:20px;
     position: relative;
-    right:70px;
-    bottom:50%;
+    left:100px;
+    bottom:90px;
 
 }
