--- a/style.css
+++ b/style.css
@@ -97,13 +97,12 @@ height: 300px;
 display: block;
 margin: 0px auto;
 display: none;
+padding-top: 10px;
 
 }
-
-#rightAr {
-    height:20px;
-    position: relative;
-    left:100px;
-    bottom:90px;
-
+#nextBut {
+    display:block;
+    margin: 0px auto;
+    margin-top: 10px;
+    display: none;
 }
