--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
 #uzb {
     background-color: #2CC990;
 }
+#uzb h1 {
+    padding-top:5px;
+}
 
 #schoolPage {
     background-color: #FCB941;
