--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-.circular img {
-    height:180px;
-    border-radius: 200px;
+.circular {
+    height:170px;
+    width:170px;
+    background-image: url("images/me-01.png");
+    background-size: 170px 170px;
     display: block;
     margin: 0px auto;
-    padding-top: 20px;
+    border-radius: 200px;
+    
 }
 body {
     margin:0;
