--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     display: block;
     margin: 0px auto;
     border-radius: 200px;
-    
+    margin-top: 30px;
 }
 body {
     margin:0;
@@ -99,7 +99,7 @@ margin-bottom: 10px;
 }
 
 #portfolioImage img {
-height: 270px;
+height: 240px;
 display: block;
 margin: 0px auto;
 display: none;
