--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ h1 {
 #schoolPage h1 {
     padding-top: 20px;
 }
+
+#uzb h1 {
+    padding-top: 20px;
+}
 #navBar {
     position: absolute;
     bottom: 0;
