--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ h1 {
 }
 
 #uzb h1 {
-    padding-top: 20px;
+    display: block;
+    padding-top: 60px;
 }
 #navBar {
     position: absolute;
@@ -92,7 +93,7 @@ h1 {
     display: block;
     margin:0px auto;
     position: relative;
-    top:30px; 
+    top:50px; 
 
 }
 
