--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ h1 {
     display: block;
     padding-top: 40px;
 }
+
+#interestsPage h1 {
+    padding-top: 50px
+}
+
 #navBar {
     position: absolute;
     bottom: 0;
@@ -218,4 +223,11 @@ visibility: hidden;
     float:right;
     display:block;
     
+}
+
+#portfolioOptions {
+    display: block;
+    margin: 0px auto;
+    position: relative;
+    top: 20px;
 }
