--- a/mob220/hw3/myStyle.css
+++ b/mob220/hw3/myStyle.css
@@ -12,7 +12,7 @@
 	position:absolute;
 	bottom: 0;
 	width: 100%;
-	overflow:auto;
+	position: fixed;
 }
 
 #lulu {
@@ -24,6 +24,9 @@
 	background-image: url("pdnCover.jpg");
 	text-align: center;
             
+            width: 100%;
+            top: 0;
+            bottom: 0;
        
 }
 
