--- a/mob220/hw3/myStyle.css
+++ b/mob220/hw3/myStyle.css
@@ -22,6 +22,7 @@
 
 #pendleton {
 	background-image: url("pdnCover.jpg");
+	background-size: 447px 336px;
 	text-align: center;
             
             width: 100%;
