--- a/mob220/hw3/myStyle.css
+++ b/mob220/hw3/myStyle.css
@@ -20,6 +20,7 @@
 	text-align: center;
 }
 
+
 #pendleton {
 	background-image: url("pdnCover.jpg");
 	background-size: 500px 376px;
@@ -31,7 +32,16 @@
        
 }
 
+#greenHall {
+	background-image: url("greenCover.jpg");
+	text-align: center;
+	
+}
 
+#jewett {
+	background-image: url("jewettCover.jpg");
+	text-align: center;
+}
 #imgCollapsible {
 	display: block;
 	margin: auto;
