--- a/studySpot/myStyle.css
+++ b/studySpot/myStyle.css
@@ -1,8 +1,18 @@
-h1 {
-
+.title {
 	font-family: Montserrat, 100;
-	font-size: 14px;
-	
+	color: #898989;
+}
+
+h1 {
+font-size: 14px;
+}
+
+h2 {
+	font-size: 18px;
+}
+
+h3 {
+	font-size: 12px;
 }
 
 #header {
@@ -16,8 +26,6 @@ h1 {
 	border-bottom: solid #898989;
 
 
-
-	
 }
 
 #heartDiv {
@@ -35,4 +43,27 @@ h1 {
 	position: relative;
 	right: -15px;
 	top:4px;
+}
+
+#homePage {
+	text-align: center;
+	background-color: #ffffff;
+}
+
+#placePrefer {
+	background-color: blue;
+	position: relative;
+	margin: auto;
+	width: 290px;
+}
+
+#placePrefer div {
+	float: left;
+	margin: 18px;
+	position: relative;
+	left:10px;
+	text-align: center;
+}
+#placePrefer div img {
+	height:50px;
 }
