--- a/studySpot/myStyle.css
+++ b/studySpot/myStyle.css
@@ -50,6 +50,10 @@ h3 {
 	background-color: #ffffff;
 }
 
+#homePage h2 {
+	padding-top: 25px;
+}
+
 #placePrefer {
 	background-color: blue;
 	position: relative;
@@ -68,7 +72,6 @@ h3 {
 	height: 90px;
 	right: -8px;
 	border-radius: 200px;
-	background-color: red;
 	left:3px;
 }
 
@@ -83,4 +86,8 @@ h3 {
 	position: relative;
 	bottom:3px;
 	
+}
+
+.selected {
+	background-color: red;
 }
