--- a/studySpot/myStyle.css
+++ b/studySpot/myStyle.css
@@ -121,6 +121,7 @@ h3 {
 	height:120px;
 	text-align: center;
 	bottom:140px;
+	right:10px;
 }
 
 .optionResource1, .optionResource3, .optionResource5 {
@@ -392,4 +393,14 @@ padding-top: 5px;
 	display: inline-block;
 	position: relative;
 	bottom: 168px;
+}
+
+#popupMenu li {
+    background-color: blue;
+    list-style-type: none;
+    margin-bottom: 10px
+
+}
+#popupMenu div {
+	background-color: red;
 }
