--- a/studySpot/myStyle.css
+++ b/studySpot/myStyle.css
@@ -396,11 +396,14 @@ padding-top: 5px;
 }
 
 #popupMenu li {
-    background-color: blue;
     list-style-type: none;
-    margin-bottom: 10px
+    margin-bottom: 10px;
+    font-family: Montserrat, 100;
+
+    
 
 }
-#popupMenu div {
-	background-color: red;
+.saveBtn {
+	position: relative;
+	left:36%;
 }
