--- a/studySpot/myStyle.css
+++ b/studySpot/myStyle.css
@@ -3,6 +3,11 @@
 	color: #898989;
 }
 
+ #appTitle {
+ color: #67B2AE;
+ }
+
+
 h1 {
 font-size: 14px;
 }
@@ -23,8 +28,9 @@ h3 {
 	top: 0;
 	width: 100%;
 	background-color: #ffffff;
-	border-bottom: solid #898989;
-
+	border-bottom: solid 1.5px #67B2AE;
+	position: fixed;
+	z-index: 5;
 
 }
 
@@ -70,12 +76,17 @@ h3 {
 	height: 480px;
 
 }
+#homePage h2 {
+	color: #9E9E9E;
+}
 
 
 
 #spacePreftitle {
 	margin: auto;
 	line-height: 7em;
+	position: relative;
+	bottom:5px;
 }
 
 #noisePreftitle {
@@ -286,6 +297,13 @@ h3 {
 	bottom: 10px;
 }
 
+#noisePrefer h3 {
+		position: relative;
+	bottom:30px;
+	color: #66B1AD;
+
+}
+
 
 
 .noiseOption {
@@ -311,12 +329,44 @@ h3 {
 
 #placePrefer h3 {
 	position: relative;
-	top:2px;
+	bottom:30px;
+	color: #66B1AD;
 	
 }
 
+#lightOptions h3 {
+		position: relative;
+	bottom:26px;
+	color: #66B1AD;
+	
+}
+
+#groupOptions h3 {
+		position: relative;
+	bottom:31px;
+	color: #66B1AD;
+}
+
+#proxOptions h3 {
+	position: relative;
+	bottom:31px;
+	color: #66B1AD;
+}
+
+#eatOptions h3 {
+	position: relative;
+	bottom:28px;
+	color: #66B1AD;
+}
+#resourceOptions h3 {
+	position: relative;
+	bottom:28px;
+	color: #66B1AD;
+
+}
+
 .selected {
-	background-color: #E0E0E0;
+	background-color: #C98BC4;
 }
 
 #filters {
@@ -343,7 +393,7 @@ h3 {
 	position: absolute;
 	bottom:0px;
 	left: 0px;
-	background-color: #898989;
+	background-color: #67B2AE;
 	width:100%;
 	text-align: center;
 }
@@ -501,7 +551,8 @@ list-style-type: none;
 	text-transform: none;
 	font-size: 45px;
 	color: #66B1AD;
-	line-height: 1;
+	line-height: 1.7;
+
 
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
@@ -631,3 +682,48 @@ list-style-type: none;
 	line-height: 1;
 	position: relative;
 	top:5px;
+
+
+#directions {
+	position: relative;
+	top: 180px;
+	padding-right: 7%;
+}
+
+#navigateTo h4 {
+	position: relative;
+	top: 170px;
+}
+
+#navigateTo h3 {
+	position: relative;
+	top: 150px;
+}
+
+#map_canvas {
+	top: 20px;
+	width: 100%;
+	height:240px;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+#ui-content {
+	position: relative;
+}
+
+.button {
+	position: absolute;
+	width: 100%;
+	bottom: 0px;
+	padding: 0;
+}
+
+#heartNav {
+	background-color: #ffffff;
+	height: 30px;
+	position: absolute;
+	top: 200px;
+	right:0;
+	width: 60px;
+}
