--- a/studySpot/myStyle.css
+++ b/studySpot/myStyle.css
@@ -532,6 +532,22 @@ list-style-type: none;
 	
 }
 
+.resultsText h2 {
+	position: relative;
+	bottom: 5px;
+
+}
+
+.resultsText h3 {
+	position: relative;
+	bottom: 20px;
+}
+
+.resultsText li {
+	position: relative;
+	bottom: 17px;
+
+}
 
 @font-face {
 	font-family: 'icomoon';
